# aubio_cmake

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
